title fix pt1: svg replaced by initial h1 (without outline, with wrapping)

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/_typography.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/_typography.scss
@@ -24,13 +24,16 @@ h1 {
   text-transform: uppercase;
   text-align: center;
   position: relative;
+  top: -0.8rem;
 
   @media (min-width: 480px) {
     font-size: $font-size-h1-tablet;
+    top: -1.4rem;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 1200px) {
     font-size: $font-size-h1;
+    top: -3rem;
   }
 }
 
